# workshop-docker-ao-vivo

./: README.md  app.py  pyproject.toml
