[tool.poetry]
name = "workshop-docker-ao-vivo"
version = "0.1.0"
description = ""
authors = ["oliveiraphm <oliveiraphm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.32.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
